# openflow

./: .env.example  CLAUDE.md  package-lock.json  package.json
backend/: flowy_agent_cli.py  flowy_mcp_server.py  pyproject.toml
backend/flowy_deepagents/: AGENTS.md  PLAN_ADVISOR.md  ROUTER.md  canvas_context.py  content_writer.py  subagents.yaml
backend/flowy_deepagents/agent/: CHARTER.md
backend/flowy_deepagents/knowledge/: NODE_REFERENCE.md  WORKFLOW_PATTERNS.md
backend/flowy_deepagents/skills/flowy-plan/: SKILL.md
backend/flowy_deepagents/tests/: test_intent_signals_validation.py
mylogs/: crop-tool.md  next-steps.txt
src/app/: globals.css  layout.tsx
src/app/projects/: page.tsx
src/components/: AnnotationModal.tsx  CanvasContextMenu.tsx  ConnectionDropMenu.tsx  CursorGlowDotBackground.tsx  FloatingActionBar.tsx  FlowyAgentPanel.tsx  FlowyCanvasChatComposer.tsx  Header.tsx  NewProjectModal.tsx  ProjectSetupModal.tsx  RunActionBar.tsx  WorkflowCanvas.tsx
src/components/__tests__/: AnnotationNode.test.tsx  EditableEdge.test.tsx  Header.test.tsx  ProjectSetupModal.test.tsx  ReferenceEdge.test.tsx  WorkflowCanvas.test.tsx
src/components/edges/: EditableEdge.tsx  ReferenceEdge.tsx
src/components/nodes/: index.ts
src/components/projects/: ProjectSync.tsx  ProjectsGrid.tsx  ProjectsNavbar.tsx  ProjectsStitchListPanel.tsx  StitchProjectsHero.tsx
src/lib/: canvasMenuSections.ts  media-collector.ts  node-categories.ts  project-directory-path.ts  projectFileIO.ts
src/lib/chat/: editOperations.ts
src/store/: workflowStore.ts
src/types/: nodes.ts
(+37 files in other folders)
